# apps.core.preloaded.ug-wifi-efl

./: CMakeLists.txt  project.config  tags  wifi-efl-ug.xml
packaging/: .wifi-efl-ug.spec.swp  wifi-efl-ug.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  nl_NL.po  (+15 more)
sources/libraries/Common/: common_eap_connect.c  common_ip_info.c  common_pswd_popup.c  common_utils.c
sources/libraries/Common/include/: common.h  common_ip_info.h  common_pswd_popup.h  common_utils.h
sources/libraries/WlanManager/WlanManager/: wlan_manager.c
sources/libraries/appcoreWrapper/: appcoreWrapper.c
sources/libraries/i18nManager/: i18nmanager.c
sources/libraries/i18nManager/include/: i18nmanager.h
sources/ui-gadget/: CMakeLists.txt  wifi-efl-UG.c  winset_popup.c
sources/ui-gadget/include/: ug_wifi.h  viewer_list.h  viewer_manager.h
sources/ui-gadget/viewers-layout/: view_advanced.c  view_detail.c  view_ime_hidden.c  viewer_manager.c  wifi_viewer_list.c
sources/ui-gadget/viewers-layout/include/: view_detail.h
sources/wearable/: CMakeLists.txt  com.samsung.wifi.manifest  com.samsung.wifi.rule  com.samsung.wifi.xml  org.tizen.w-wifi.xml  tizen-manifest.xml
sources/wearable/inc/: util.h
sources/wearable/inc/net/: wifi_generate_pin.h  wifi_manager.h
sources/wearable/inc/net/util/: vconf_helper.h  wifi_address.h
sources/wearable/inc/util/: idler.h  locale.h  log.h
sources/wearable/inc/wearable-circle/: view.h
sources/wearable/inc/wearable-circle/view/: base.h  layout_ap_info.h  layout_detail.h  layout_eap_method.h  layout_main.h  layout_password_entry.h  layout_proxy_setting.h  layout_scan.h  layout_static_ip.h  layout_wearable_input.h  layout_wps_method.h  layout_wps_progress.h  popup_change_ap.h  popup_scanning.h  popup_unable_scan.h  toast_popup.h
sources/wearable/inc/wearable-circle/view/util/: efl_helper.h
sources/wearable/res/po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  (+42 more)
sources/wearable/res/wearable-circle/edje/: wifi.edc
sources/wearable/res/wearable-fit/edje/: wifi.edc
sources/wearable/res/wearable/edje/: wifi.edc
sources/wearable/shared/res/tables/: color_table.xml  font_table.xml
sources/wearable/src/net/: wifi_generate_pin.c  wifi_manager.c
sources/wearable/src/net/util/: wifi_address.c
sources/wearable/src/util/: idler.c
sources/wearable/src/wearable-circle/: app_main.c
sources/wearable/src/wearable-circle/view/: base.c  layout_ap_info.c  layout_detail.c  layout_eap_method.c  layout_main.c  layout_password_entry.c  layout_proxy_setting.c  layout_scan.c  layout_static_ip.c  layout_wearable_input.c  layout_wps_method.c  layout_wps_progress.c  popup_change_ap.c  popup_scanning.c  popup_unable_scan.c  toast_popup.c
sources/wearable/src/wearable-circle/view/util/: efl_helper.c
sources/wifi-syspopup/: CMakeLists.txt  net.wifi-qs.xml  wifi-syspopup.c
sources/wifi-syspopup/include/: wifi-syspopup.h
sources/wifi-syspopup/viewer-popups/: view-main.c
